# mcp-http-API-template

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  LICENSE  OAUTH_IMPLEMENTATION.md  README.md  auth.py  database.py  generate_token.py  local-proxy.js  logging_decorator.py  oauth.py  package.json  pyproject.toml  requirements.txt  run_local.bat  run_local.py  run_local_simple.bat  run_mcp_server.bat  server.py  test_mcp.py
scripts/: build.sh  claude-desktop-bridge.js  deploy-gcp.sh  generate-self-signed-cert.sh  mcp-bridge.js  run-local.sh  run-with-letsencrypt.sh  setup-ssl.sh  test-http-deployment.sh
