[project]
name = "mcp-server-template"
version = "1.0.0"
description = "Production-ready FastMCP server template with HTTPS and authentication"
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

dependencies = [
    "mcp>=1.0.0",
    "anyio>=4.0.0,<5.0.0",
    "typing-extensions>=4.5.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.35.0",
    "starlette>=0.37.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=1.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 