[project]
name = "mcp-server-template"
version = "1.0.0"
description = "Production-ready FastMCP server template with HTTPS and authentication"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "anyio>=4.0.0,<5.0.0",
    "typing-extensions>=4.5.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.35.0",
    "starlette>=0.37.0",
    "authlib[httpx]>=1.3.0",
    "httpx>=0.26.0",
    "pyjwt>=2.8.0",
    "itsdangerous>=2.0.0",
    "aiosqlite>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

dependencies = [
    "mcp>=1.0.0",
    "anyio>=4.0.0,<5.0.0",
    "typing-extensions>=4.5.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.35.0",
    "starlette>=0.37.0",
    "authlib[httpx]>=1.3.0",
    "httpx>=0.26.0",
    "pyjwt>=2.8.0",
    "itsdangerous>=2.0.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=1.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 
